quartz-util: add jndi.SimpleNamingContextBuilder for testing purpose